# OLGA

./: .gitignore  MANIFEST.in  README.md  compute_single_sequence_pgen.py  generate_synthetic_sequences.py  pyproject.toml  run_pgen.py  setup.py
data/: example_seqs.tsv
expanded_alphabet_files/: example_expanded_amino_acid_alphabet.txt
models/human_T_beta/: J_gene_CDR3_anchors.csv
olga/: compute_pgen.py  compute_single_sequence_pgen.py  generate_sequences.py  generate_synthetic_sequences.py  generation_probability.py  load_model.py  paths.py  preprocess_generative_model_and_data.py  run_pgen.py  sequence_generation.py  utils.py
olga/default_models/human_B_heavy/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
olga/default_models/human_B_kappa/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
olga/default_models/human_B_lambda/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
olga/default_models/human_T_alpha/: J_gene_CDR3_anchors.csv
olga/default_models/human_T_beta/: J_gene_CDR3_anchors.csv
olga/default_models/mouse_B_heavy/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
olga/default_models/mouse_B_kappa/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
olga/default_models/mouse_B_lambda/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
olga/performance/: README.md  fast_pgen.py  kernels.py
olga/tests/: test_olga.py
results/: example_pgen.tsv
scripts/: compare_pgen_values_with_ulp.py
tests/: conftest.py  test_fast_pgen.py  test_generation_probability.py  test_load_model.py  test_sequence_generation.py  test_utils.py
