[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olga"
version = "1.3.0"
description = "Compute generation probability of CDR3 sequences"
readme = "README.md"
requires-python = ">=2.7"
license = {text = "GPLv3"}
authors = [
    {name = "Zachary Sethna", email = "zachary.sethna@gmail.com"}
]
maintainers = [
    {name = "Giulio Isacchini", email = "giulioisac@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.6",
]
urls = {Homepage = "https://github.com/statbiophys/OLGA"}
dependencies = [ "numpy", "numba" ]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
]

[project.scripts]
olga-compute_pgen = "olga.compute_pgen:main"
olga-generate_sequences = "olga.generate_sequences:main"

[tool.setuptools]
packages = {find = {}}
zip-safe = false

[tool.setuptools.package-data]
"olga.default_models.human_T_alpha" = ["*"]
"olga.default_models.human_T_beta" = ["*"]
"olga.default_models.mouse_T_beta" = ["*"]
"olga.default_models.mouse_T_alpha" = ["*"]
"olga.default_models.human_B_heavy" = ["*"]
"olga.default_models.human_B_kappa" = ["*"]
"olga.default_models.human_B_lambda" = ["*"]
"olga.default_models.mouse_B_heavy" = ["*"]
"olga.default_models.mouse_B_kappa" = ["*"]
"olga.default_models.mouse_B_lambda" = ["*"]

[tool.setuptools.data-files]
"" = ["README.md", "LICENSE", "example_expanded_amino_acid_alphabet.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

